--- a/_LEZIONI/03_JAVASCRIPT/index.html
+++ b/_LEZIONI/03_JAVASCRIPT/index.html
@@ -13,11 +13,6 @@
     <link rel="stylesheet" href="../02_HTML_CSS/assets/reset.css" />
     <link rel="stylesheet" href="../02_HTML_CSS/assets/style.css" />
     <!-- Link al file javascript -->
-    <!-- <script src="script.js" type="text/javascript"></script> -->
-    <!-- <script type="text/javascript">
-      /* Questo è un commento JS */
-      console.log("Hello World!");
-    </style> -->
   </head>
   <body>
     <!-- Inserire il contenuto della pagina -->
@@ -28,7 +23,7 @@
           <img src="../02_HTML_CSS/assets/img/logo.png" alt="Logo Instagram" />
         </div>
         <!-- Menu -->
-        <nav class="main-menu">
+        <nav class="main-menu" id="navBar">
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/chi-siamo">Chi siamo</a></li>
@@ -39,12 +34,12 @@
       <main class="main">
         <!-- Lista di box ordinati a 3 per riga -->
         <section class="box-list">
-          <div class="box"><span>1</span></div>
+          <!-- <div class="box"><span>1</span></div>
           <div class="box"><span>2</span></div>
           <div class="box"><span>3</span></div>
           <div class="box"><span>4</span></div>
           <div class="box"><span>5</span></div>
-          <div class="box"><span>6</span></div>
+          <div class="box"><span>6</span></div> -->
         </section>
       </main>
       <footer class="footer">
@@ -58,5 +53,6 @@
         </div>
       </footer>
     </div>
+    <script src="./assets/index.js" type="text/javascript"></script>
   </body>
 </html>
